# odoo-mcp

./: .config.example.yaml.swp  CLAUDE.md  Cargo.toml  README.md  build-all.sh  config.example.yaml
.github/workflows/: release.yml
install/linux/: install.sh
install/mac/: install.sh
install/windows/: install.bat  install.ps1
src/: lib.rs  main.rs  mcp.rs  sources.rs
