[package]
name = "odoo-xml-rpc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "odoo-xml-rpc"
path = "src/main.rs"

[lib]
name = "odoo_xml_rpc"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
roxmltree = "0.20"
dirs = "5"
