[package]
name = "odoo-claude-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "odoo-claude-mcp"
path = "src/main.rs"

[lib]
name = "odoo_claude_mcp"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dirs = "5"
gix = { version = "0.84.0", features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation"] }
